<resources>
    <string name="app_name">My Application</string>
    <string name="martes">Viernes</string>
    <string name="fecha">15 de julio</string>
    <string name="boton">Terminar Jornada</string>
    <string name="nomplaza">Café Mimi</string>
    <string name="lugar">14 calle 7-85 zona 10 Guatemala City, 01010</string>
    <string name="time">8:00 AM 7:00 PM</string>
    <string name="inicio">Iniciar</string>
    <string name="Det">Detalles</string>
    <string name="download">Descargar</string>
    <string name="visita">Iniciar Visita</string>
    <string name="info">Información adicional</string>
    <string name="llamar">Llamar</string>
    <string name="cel">Teléfono</string>
    <string name="numm">2367-2676</string>
    <string name="atencion">Horario de atención</string>
</resources>